--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>TYLER SHOCKEY</h1>
 			<div class="topicons">
 				<h3>About Me</h3>
-				<a href="#">Portfolio</a>
+				<a href="portfolio.html">Portfolio</a>
 			</div>
 		</header>
 			<section>
