centered portfolio pics

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, voluptates perspiciatis sed corporis tenetur sequi, obcaecati consequatur nam voluptatem sunt quasi excepturi, iure voluptas officiis aliquid iste exercitationem dolores labore.
 			</p>
 			<div class="projects">
-				<img src="CSS/Images/citipix-deliverable.png">
-				<img src="CSS/Images/relaxr-deliverable.png">
-				<img src="CSS/Images/startup-matchmaker-deliverable.png">
+				<img class="pics" src="CSS/Images/citipix-deliverable.png">
+				<img class="pics" src="CSS/Images/relaxr-deliverable.png">
+				<img class="pics" src="CSS/Images/startup-matchmaker-deliverable.png">
 			</div>
 		</main>
 		<footer>
