--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Carter+One" rel="stylesheet">
 </head>
 <body>
 	<div id="container">
@@ -18,13 +19,30 @@
 		<main>
 			<h2>EXPERIENCE</h2>
 			<p class="experience">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, voluptates perspiciatis sed corporis tenetur sequi, obcaecati consequatur nam voluptatem sunt quasi excepturi, iure voluptas officiis aliquid iste exercitationem dolores labore.
+			I recently started a Web Development Immersive course at General Assembly, where I am learning HTML, CSS, JavaScript, and probably some other things! During my spare time, I enjoy senior water aerobics, pickling, and spending time with my goldfish, Jerry.
 			</p>
+			<h2>PORTFOLIO</h2>
 			<div class="projects">
-				<img class="pics" src="CSS/Images/citipix-deliverable.png">
-				<img class="pics" src="CSS/Images/relaxr-deliverable.png">
-				<img class="pics" src="CSS/Images/startup-matchmaker-deliverable.png">
+				<ul type="disk">
+					<li>Web Developer, CitiPix <span>2017 – present</span></li>
+					<h4>Built web app prototype that allows users to store and quickly retrieve photos using keywords.</h4>
+					<img class="pics" src="CSS/Images/citipix-deliverable.png">
+					<li>Web Developer, Relaxr <span>2017 - present</span></li>
+					<h4>Developed a multi-column layout blog, landing page, and contact forms that render on mobile devices.</h4>
+					<img class="pics" src="CSS/Images/relaxr-deliverable.png">
+					<li>Web Developer, Startup Matchmaker <span>2017 - present</span></li>
+					<h4>Used a design team's wireframes to develop this company's responsive homepage.</h4>
+					<img class="pics" src="CSS/Images/startup-matchmaker-deliverable.png">
+				</ul>	
 			</div>
+			<h2>EDUCATION</h2>
+			<p class="experience">
+				<ul class="education">
+					<li>General Assembly — WDI 2017</li>
+					<li>College of Soft Knocks — B.S. 2009</li>
+					<li>School of Hard Knocks — 2005 (Honors)</li>
+				</ul>	
+			</p>
 		</main>
 		<footer>
 			<div class="links">
