--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Tyler Shockey</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Carter+One" rel="stylesheet">
 </head>
 <body>
 	<div id="container">
@@ -18,6 +19,7 @@
 			<section>
 				<img src="CSS/Images/profile pic.jpg">
 				<h2>I ENJOY LIFE AS A DEVELOPER</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ad unde, praesentium aspernatur magni assumenda quae quisquam alias adipisci sint non nobis omnis dicta vero molestiae! Rerum voluptatem, necessitatibus eveniet.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ad unde, praesentium aspernatur magni assumenda quae quisquam alias adipisci sint non nobis omnis dicta vero molestiae! Rerum voluptatem, necessitatibus eveniet.</p>
 				
 			</section>
